--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -20,19 +20,31 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
           cache: true
+      
       - name: Enable Web
-        run: flutter config --enable-web
+        run: |
+          flutter config --enable-web
+          flutter doctor -v
+      
       - name: Get dependencies
-        run: flutter pub get
+        run: |
+          flutter pub get
+          flutter pub upgrade
+      
       - name: Build
-        run: flutter build web --base-href "/app-class4vet/"
+        run: |
+          flutter clean
+          flutter build web --release --base-href "/app-class4vet/"
+      
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
