--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -53,4 +53,6 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1 
+        uses: actions/deploy-pages@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }} 
