--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -22,18 +22,15 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Setup Flutter
-        uses: subosito/flutter-action@v2
+        uses: subosito/flutter-action@v2.12.0
         with:
           channel: 'stable'
       
-      - name: Enable Web
-        run: flutter config --enable-web
-      
-      - name: Get dependencies
-        run: flutter pub get
-      
-      - name: Build
-        run: flutter build web --release --base-href "/app-class4vet/"
+      - name: Build Web
+        run: |
+          flutter config --enable-web
+          flutter pub get
+          flutter build web --release --base-href "/app-class4vet/"
       
       - name: Setup Pages
         uses: actions/configure-pages@v3
