--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -41,13 +41,13 @@ jobs:
           flutter pub get
           flutter build web --release --base-href "/app-class4vet/"
       
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build/web
-          commit_message: "Deploy to GitHub Pages"
-          force: true
+          path: './build/web'
 
   deploy:
     environment:
