--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,22 +21,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       
-      - name: Install Dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y curl git unzip xz-utils zip libglu1-mesa
-          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev
-      
-      - name: Install Flutter
-        run: |
-          wget https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.19.3-stable.tar.xz
-          tar xf flutter_linux_3.19.3-stable.tar.xz
-          export PATH="$PATH:`pwd`/flutter/bin"
-          flutter doctor
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
       
       - name: Build Web
         run: |
-          export PATH="$PATH:`pwd`/flutter/bin"
           flutter config --enable-web
           flutter pub get
           flutter build web --release --base-href "/app-class4vet/"
