--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,16 +3,15 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       
       - uses: subosito/flutter-action@v2
         with:
