업데이트: 코드 리팩토링 및 모델 추가

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/icons/category/
+    - assets/images/
 
 dependency_overrides:
   file: ^7.0.0
