--- a/.github/workflows/stg.yml
+++ b/.github/workflows/stg.yml
@@ -28,7 +28,7 @@ jobs:
           aws-region: ${{ vars.AWS_REGION }}
       - name: Deploy to S3
         run: |
-          aws s3 sync ./dist s3://${{ vars.S3_BUCKET }} --delete
+          aws s3 sync ./build/web s3://${{ vars.S3_BUCKET }} --delete
       - name: Invalidate CloudFront Cache
         run: |
           aws cloudfront create-invalidation --distribution-id ${{ vars.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
